--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
@@ -22,27 +22,27 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-lg-10">
-                                    <input type="text" asp-for="NameEn" id="f-name" class="form-control" placeholder="Name AZE">
+                                    <input type="text" asp-for="NameEn" id="f-name" class="form-control" placeholder="Name ENG">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="col-lg-10">
-                                    <input type="text" asp-for="NameRu" id="f-name" class="form-control" placeholder="Name AZE">
+                                    <input type="text" asp-for="NameRu" id="f-name" class="form-control" placeholder="Name RU">
                                 </div>
                             </div>
                             <div class="form-group ">
                                 <div class="col-lg-10">
-                                    <textarea class="form-control " id="ccomment" asp-for="ContentAz" required="" placeholder="Name AZE"></textarea>
+                                    <textarea class="form-control " id="ccomment" asp-for="ContentAz" required="" placeholder="Content AZE"></textarea>
                                 </div>
                             </div>
                             <div class="form-group ">
                                 <div class="col-lg-10">
-                                    <textarea class="form-control " id="ccomment" asp-for="ContentEn" required="" placeholder="Name AZE"></textarea>
+                                    <textarea class="form-control " id="ccomment" asp-for="ContentEn" required="" placeholder="Content ENG"></textarea>
                                 </div>
                             </div>
                             <div class="form-group ">
                                 <div class="col-lg-10">
-                                    <textarea class="form-control " id="ccomment" asp-for="ContentRu" required="" placeholder="Name AZE"></textarea>
+                                    <textarea class="form-control " id="ccomment" asp-for="ContentRu" required="" placeholder="Content RU"></textarea>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -64,6 +64,7 @@
                             <div class="form-group">
                                 <div class="col-lg-offset-2 col-lg-10">
                                     <button class="btn btn-success" type="submit">Submit</button>
+                                    <button class="btn btn-default cancel-button" type="button">Cancel</button>
                                 </div>
                             </div>
                         </form>
@@ -73,3 +74,11 @@
         </div>
     </div>
 </section>
+
+@section scripts{
+    <script>
+        $(".cancel-button").click(function () {
+            window.location.href = "/ConstructionAdmin/SubService/Index";
+        })
+    </script>
+}
