--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Update.cshtml
@@ -3,78 +3,76 @@
     ViewData["Title"] = "Update";
 }
 
-    <div class="text-danger" asp-validation-summary="All"></div>
+<div class="text-danger" asp-validation-summary="All"></div>
 
-    <div class="row">
-        <div class="col-lg-12">
-            <section class="panel">
-                <header class="panel-heading">
-                    SubService About
-                </header>
-                <div class="panel-body">
-                    <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Update" method="post" enctype="multipart/form-data">
-                        <input type="hidden" name="Id" value="@Model.Id" />
-                        <input type="hidden" name="ServerId" value="@Model.ServerId" />
-                        <input type="hidden" name="SubServiceId" value="@Model.SubServiceId" />
-                        <input type="hidden" name="imageId" value="@Model.imageId" />
-                        <div class="form-group">
-
-                            <div class="col-lg-10">
-                                <input asp-for="NameAz" id="f-name" class="form-control">
-                            </div>
+<div class="row">
+    <div class="col-lg-12">
+        <section class="panel">
+            <header class="panel-heading">
+                SubService About
+            </header>
+            <div class="panel-body">
+                <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Update" method="post" enctype="multipart/form-data">
+                    <input type="hidden" name="Id" value="@Model.Id" />
+                    <input type="hidden" name="ServerId" value="@Model.ServerId" />
+                    <input type="hidden" name="SubServiceId" value="@Model.SubServiceId" />
+                    <input type="hidden" name="imageId" value="@Model.imageId" />
+                    <div class="form-group">
+                        <div class="col-lg-10">
+                            <input asp-for="NameAz" id="f-name" class="form-control" placeholder="Name AZE">
                         </div>
-                        <div class="form-group">
-
-                            <div class="col-lg-10">
-                                <input asp-for="NameRu" id="f-name" class="form-control">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-lg-10">
+                            <input asp-for="NameEn" id="f-name" class="form-control" placeholder="Name ENG">
                         </div>
-                        <div class="form-group">
-
-                            <div class="col-lg-10">
-                                <input asp-for="NameEn" id="f-name" class="form-control">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-lg-10">
+                            <input asp-for="NameRu" id="f-name" class="form-control" placeholder="Name RU">
                         </div>
-
-                        <div class="form-group ">
-
-                            <div class="col-lg-10">
-                                <textarea asp-for="ContentAz" class="form-control " id="ccomment"></textarea>
-                            </div>
+                    </div>
+                    <div class="form-group ">
+                        <div class="col-lg-10">
+                            <textarea asp-for="ContentAz" class="form-control " id="ccomment" placeholder="Content AZE"></textarea>
                         </div>
-                        <div class="form-group ">
-
-                            <div class="col-lg-10">
-                                <textarea asp-for="ContentRu" class="form-control " id="ccomment"></textarea>
-                            </div>
+                    </div>
+                    <div class="form-group ">
+                        <div class="col-lg-10">
+                            <textarea asp-for="ContentEn" class="form-control " id="ccomment" placeholder="Content ENG"></textarea>
                         </div>
-                        <div class="form-group ">
-
-                            <div class="col-lg-10">
-                                <textarea asp-for="ContentEn" class="form-control " id="ccomment"></textarea>
-                            </div>
+                    </div>
+                    <div class="form-group ">
+                        <div class="col-lg-10">
+                            <textarea asp-for="ContentRu" class="form-control " id="ccomment" placeholder="Content RU"></textarea>
                         </div>
-
-                        <div class="form-group ">
-
-                            <div class="col-lg-10">
-                                <img src="@Model.ImagePath" width="60" height="70" alt="Alternate Text" />
-                            </div>
+                    </div>
+                    <div class="form-group ">
+                        <div class="col-lg-10">
+                            <img src="@Model.ImagePath" width="60" height="70" alt="Alternate Text" />
                         </div>
-                        <div class="form-group">
-
-                            <div class="col-lg-10">
-                                <input type="file" name="file" placeholder="Images" id="f-name" class="form-control">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-lg-10">
+                            <input type="file" name="file" placeholder="Images" id="f-name" class="form-control">
                         </div>
-
-                        <div class="form-group">
-                            <div class="col-lg-offset-2 col-lg-10">
-                                <button class="btn btn-success" type="submit">Submit</button>
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-lg-offset-2 col-lg-10">
+                            <button class="btn btn-success" type="submit">Submit</button>
+                            <button class="btn btn-default cancel-button" type="button">Cancel</button>
                         </div>
-                    </form>
-                </div>
-            </section>
-        </div>
+                    </div>
+                </form>
+            </div>
+        </section>
     </div>
+</div>
+
+@section scripts{
+    <script>
+        $(".cancel-button").click(function () {
+            window.location.href = "/ConstructionAdmin/Testimonial/Index";
+        })
+    </script>
+}
