--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Add.cshtml
@@ -13,41 +13,35 @@
                 </header>
                 <div class="panel-body">
                     <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Testimonial" asp-action="Add" method="post">
-
                         <div class="form-group ">
-
                             <div class="col-lg-10">
                                 <textarea asp-for="ContentAz" class="form-control " id="ccomment" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
-
-                            <div class="col-lg-10">
-                                <textarea asp-for="ContentRu" class="form-control " id="ccomment" required=""></textarea>
-                            </div>
-                        </div>
-                        <div class="form-group ">
-
                             <div class="col-lg-10">
                                 <textarea asp-for="ContentEn" class="form-control " id="ccomment" required=""></textarea>
                             </div>
                         </div>
+                        <div class="form-group ">
+                            <div class="col-lg-10">
+                                <textarea asp-for="ContentRu" class="form-control " id="ccomment" required=""></textarea>
+                            </div>
+                        </div>
                         <div class="form-group">
-
+                            <div class="col-lg-10">
+                                <input asp-for="FullName" id="f-name" class="form-control" required>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <div class="col-lg-10">
                                 <input asp-for="Position" id="f-name" class="form-control" required>
                             </div>
                         </div>
                         <div class="form-group">
-
-                            <div class="col-lg-10">
-                                <input asp-for="FullName" id="f-name" class="form-control" required>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
                             <div class="col-lg-offset-2 col-lg-10">
                                 <button class="btn btn-success" type="submit">Submit</button>
+                                <button class="btn btn-default cancel-button" type="button">Cancel</button>
                             </div>
                         </div>
                     </form>
