--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Update.cshtml
@@ -14,41 +14,35 @@
             <div class="panel-body">
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Testimonial" asp-action="Update" method="post" enctype="multipart/form-data">
                     <input type="hidden" name="Id" value="@Model.Id" />
-
                     <div class="form-group ">
-
                         <div class="col-lg-10">
                             <textarea asp-for="ContentAz" class="form-control " id="ccomment"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
-
-                        <div class="col-lg-10">
-                            <textarea asp-for="ContentRu" class="form-control " id="ccomment"></textarea>
-                        </div>
-                    </div>
-                    <div class="form-group ">
-
                         <div class="col-lg-10">
                             <textarea asp-for="ContentEn" class="form-control " id="ccomment"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
-
+                        <div class="col-lg-10">
+                            <textarea asp-for="ContentRu" class="form-control " id="ccomment"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group ">
                         <div class="col-lg-10">
                             <textarea asp-for="FullName" class="form-control " id="ccomment"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
-
                         <div class="col-lg-10">
                             <textarea asp-for="Position" class="form-control " id="ccomment"></textarea>
                         </div>
                     </div>
-
                     <div class="form-group">
                         <div class="col-lg-offset-2 col-lg-10">
                             <button class="btn btn-success" type="submit">Submit</button>
+                            <button class="btn btn-default cancel-button" type="button">Cancel</button>
                         </div>
                     </div>
                 </form>
