--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
@@ -7,9 +7,11 @@
     .button-create {
         margin-bottom: 10px;
     }
+    .text-style{
+        text-align: center;
+        font-size: 1.2em;
+    }
 </style>
-
-<div class="text-danger" asp-validation-summary="All"></div>
 
 <section class="panel">
     <header class="panel-heading">
@@ -23,7 +25,7 @@
         <div class="adv-table editable-table ">
             <div class="space15"></div>
             <div id="editable-sample_wrapper" class="dataTables_wrapper form-inline" role="grid">
-                <table class="table table-striped table-hover table-bordered dataTable" id="editable-sample" aria-describedby="editable-sample_info">
+                <table id="editable-sample myTable" class="table table-striped table-hover table-bordered dataTable" aria-describedby="editable-sample_info">
                     <thead>
                         <tr role="row">
                             <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Title</th>
@@ -35,18 +37,28 @@
                     </thead>
 
                     <tbody role="alert" aria-live="polite" aria-relevant="all">
-
-                        @foreach (var item in Model)
+                        @if (Model.Any())
                         {
-                        <tr class="odd">
+                            @foreach (var item in Model)
+                            {
+                                <tr class="odd">
 
-                            <td class="sorting_1">@item.Tittle</td>
-                            <td class=" ">@item.Content</td>
-                            <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
-                            <td class=" "><a class="edit btn btn-primary" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
-                            <td class=" "><a class="btn btn-danger delete delete-about"asp-area="ConstructionAdmin" asp-controller="About" asp-action="Delete" asp-route-id="@item.Id">Delete</a></td>
-                        </tr>
+                                    <td class="sorting_1">@item.Tittle</td>
+                                    <td class=" ">@item.Content</td>
+                                    <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
+                                    <td class=" "><a class="edit btn btn-primary" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
+                                    <td class=" "><a class="btn btn-danger delete delete-about" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Delete" asp-route-id="@item.Id">Delete</a></td>
+                                </tr>
+                            }
                         }
+                        else
+                        {
+                            <tr class="odd">
+                                <td class="text-style text-danger" colspan="5" asp-validation-summary="All">Hec bir Data yoxdur</td>
+                            </tr>
+                        }
+
+
                     </tbody>
                 </table>
             </div>
@@ -54,9 +66,7 @@
     </div>
 </section>
 @section scripts{
-    @*<script src="~/ConstructionAdmin/js/jquery-1.8.3.min.js"></script>*@
     <script>
-
         $(".delete-about").click(function () {
             var id = $(this).data("id");
 
@@ -66,5 +76,11 @@
 
         })
         });
+    </script>
+
+    <script>
+        $(document).ready(function () {
+            $('#myTable').DataTable();
+        })
     </script>
 }
