--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
@@ -20,7 +20,7 @@
     <!-- Custom styles for this template -->
     <link href="~/ConstructionAdmin/css/style.css" rel="stylesheet">
     <link href="~/ConstructionAdmin/css/style-responsive.css" rel="stylesheet" />
-
+    <link href="~/lib/datatables/css/jquery.dataTables.css" rel="stylesheet" />
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 tooltipss and media queries -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -115,6 +115,8 @@
     <script src="~/ConstructionAdmin/js/sparkline-chart.js"></script>
     <script src="~/ConstructionAdmin/js/easy-pie-chart.js"></script>
     <script src="~/ConstructionAdmin/js/count.js"></script>
+    <script src="~/lib/datatables/js/jquery.dataTables.js"></script>
+
     @RenderSection("scripts",false)
     <script>
 
