--- a/ConstructionSite/Views/Shared/Components/Blog/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Blog/Default.cshtml
@@ -21,7 +21,7 @@
                             <div class="cbp-item">
                                 <div class="service-item clearfix">
 
-                                    <div class="thumb"><img width="300" height="370" src="@item.Image" alt="image" /></div>
+                                    <div class="thumb"><img  imgwidth="780"   height="370" src="@item.Image" alt="image" /></div>
                                     <div class="service-item-wrap">
                                         <h3 class="title font-size-18"><a asp-controller="Blog" asp-action="Detalye" asp-route-id="@item.Id">@item.Tittle</a></h3>
                                         <p blogtext="@item.Content"></p>
