--- a/ConstructionSite/Views/Home/Index.cshtml
+++ b/ConstructionSite/Views/Home/Index.cshtml
@@ -148,8 +148,8 @@
         <div id="site-content" class="site-content clearfix">
             <div id="inner-content" class="inner-content-wrap">
                 <div class="page-content">
-                    
-                    @await Component.InvokeAsync("About")
+
+                    @*@await Component.InvokeAsync("About")*@
 
                     @*@await Component.InvokeAsync("Service")
         @await Component.InvokeAsync("Portfolio")
