--- a/ConstructionSite/Views/Services/Services.cshtml
+++ b/ConstructionSite/Views/Services/Services.cshtml
@@ -30,7 +30,7 @@
 
                         <div class="wprt-spacer" data-desktop="25" data-mobi="25" data-smobi="25" style="height:25px"></div>
 
-                        <p class="margin-bottom-0">@Model.Tittle</p>
+                        <p class="margin-bottom-0">@Model.Content</p>
 
                         <div class="wprt-spacer" data-desktop="35" data-mobi="35" data-smobi="35" style="height:35px"></div>
 
@@ -48,7 +48,7 @@
 
                         <div class="wprt-spacer" data-desktop="25" data-mobi="25" data-smobi="25" style="height:25px"></div>
 
-                        <p class="margin-bottom-0">@Model.Name.</p>
+                        <p class="margin-bottom-0">@Model.Name</p>
 
                         <div class="wprt-spacer" data-desktop="30" data-mobi="30" data-smobi="30" style="height:30px"></div>
 
