--- a/ConstructionSite/Areas/ConstructionAdmin/Views/AdminRole/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/AdminRole/Index.cshtml
@@ -76,16 +76,11 @@
                                 <td class=" "><a class="edit btn btn-primary" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
                                 <td class=" "><a class="btn btn-danger delete delete-about" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Delete" asp-route-id="@item.Id">Delete</a></td>
                             </tr>
-                        }
+                                }
+                            }
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
-</section>*@
-
-
-        })
-        });
-    </script>
-}
+</section>
