--- a/ConstructionSite/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Views/Portfolio/Index.cshtml
@@ -26,18 +26,32 @@
             </div>
             @foreach (var item in Model)
             {
-                <div class="cbp-filter-item">
-                    
-                    <a asp-controller="Portfolio" asp-action="Project" asp-route-id="@item.Id"><span>@item.Name</span></a>
+                <div class="cbp-filter-item cbp-filter-item-active mains" data-id="@item.Id">
+                    <span>@item.Name</span>
                 </div>
             }
+            
+            @section scrips{
+                        <script>
 
-         
+                            $(".mains").click(function () {
+                                var id = $(this).data("id");
+                                $.ajax({
+                                    method: "GET",
+                                    url: "/Portfolio/Project/" + id,
+
+                                });
+                            });
+                        </script>
+             }
+            
+
+
 
         </div>
         <!-- /#project-filter -->
-        <partial name="_ProjectView"/>
-       
+      
+
         <!-- /#projects -->
 
     </div>
@@ -45,4 +59,4 @@
 
 </section>
 <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
-<!--/.space-->
+
