--- a/ConstructionSite/Views/Shared/_footerMenu.cshtml
+++ b/ConstructionSite/Views/Shared/_footerMenu.cshtml
@@ -1,8 +1,10 @@
-﻿<li><a asp-controller="Home" asp-action="Index">Home</a></li>
-<li><a asp-controller="Portfolio" asp-action="Index">Portfolio</a></li>
-<li class="last"><a asp-controller="TermsAndConditions" asp-action="Index">Term of Use</a></li>
-<li class="last"><a asp-controller="About" asp-action="Index">About Us</a></li>
-<li><a asp-controller="Blog" asp-action="Index">News</a></li>
-<li class="last"><a asp-controller="TermsAndConditions" asp-action="Index">Conditions</a></li>
-<li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
-<li class="last"><a asp-controller="TermsAndConditions" asp-action="Index">Conditions</a></li>
+﻿@inject SharedLocalizationService Localizer
+
+<li><a asp-controller="Home" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Home)</a></li>
+<li><a asp-controller="Portfolio" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Portfolio)</a></li>
+<li class="last"><a asp-controller="TermsAndConditions" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.TermOfUse)</a></li>
+<li class="last"><a asp-controller="About" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.AboutUs)</a></li>
+<li><a asp-controller="Blog" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.News)</a></li>
+<li class="last"><a asp-controller="TermsAndConditions" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Conditions)</a></li>
+<li><a asp-controller="Contact" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Contact)</a></li>
+<li class="last"><a asp-controller="TermsAndConditions" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Conditions)</a></li>
