--- a/ConstructionSite/Views/Shared/_Project.cshtml
+++ b/ConstructionSite/Views/Shared/_Project.cshtml
@@ -4,7 +4,6 @@
     <div id="projects" class="cbp cbp-caption-active cbp-caption- cbp-ready" style="height: 464px;">
         <div class="cbp-wrapper-outer">
             <div class="cbp-wrapper">
-
                 <div class="cbp-item architecture interior workspace" style="width: 337px; left: 0px; top: 0px;">
                     <div class="cbp-item-wrapper">
                         <div class="project-item">
@@ -15,12 +14,10 @@
                                         <figcaption>
                                             <div>
                                                 <h2><a target="_blank" href="portfolio-main.html">@item.Name</a></h2>
-                                                
                                             </div>
                                         </figcaption>
                                     </figure>
                                 </div>
-
                                 <a class="project-zoom cbp-lightbox" href="assets/img/projects/1-full.jpg" data-title="@item.Name">
                                     <i class="fa fa-arrows-alt"></i>
                                 </a>
@@ -28,9 +25,7 @@
                         </div>
                     </div>
                 </div>
-
-
-
             </div>
         </div>
-    </div>}
+    </div>
+}
