--- a/ConstructionSite/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Views/Blog/Index.cshtml
@@ -36,7 +36,7 @@
                                 <div class="post-meta-content">
                                     <div class="post-meta-content-inner">
                                         <span class="post-date item">
-                                            <span class="inner"><span class="entry-date">@item.CreateDate.ToString("MMMM dd yyyy")</span></span>
+                                            <span class="inner"><span class="entry-date">@item.CreateDate</span></span>
                                         </span>
                                     </div>
                                 </div>
